fix: (anime_score) fix the 'black butler' anime name and change the grid layout to autoplace by column instead of row

--- a/anime_score/style.css
+++ b/anime_score/style.css
@@ -6,9 +6,7 @@ body {
 
 #animeList {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-.checkbox-block {
-    padding: 2px
+    grid-template-rows: repeat(25, 1fr);
+    gap: 4px;
+    grid-auto-flow: column;
 }
