feat: (bendy_bingo) update notes for B1, N1, Y1, E2, D2, Y2, Y3 and B4

--- a/bendy_bingo/style.css
+++ b/bendy_bingo/style.css
@@ -19,8 +19,14 @@ td {
 .Y2,
 .N3,
 .Y3,
-.B4 {
+.B4,
+.N1,
+.D2 {
     background-color: #3dc45c;
+}
+
+.E2 {
+    background-color: yellow;
 }
 
 #notes {
