feat: (bendy_bingo) update notes for E1, B2, E2, N2, B3, E3, D3, D4 and B5

--- a/bendy_bingo/style.css
+++ b/bendy_bingo/style.css
@@ -21,12 +21,17 @@ td {
 .Y3,
 .B4,
 .N1,
-.D2 {
+.D2,
+.N2,
+.E1,
+.B3,
+.B2,
+.D4,
+.D3,
+.E2,
+.E3,
+.B5 {
     background-color: #3dc45c;
-}
-
-.E2 {
-    background-color: yellow;
 }
 
 #notes {
